--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="/odin-recipes/recipes/bread.html">Bread</a></li>
-    <li><a href="/odin-recipes/recipes/pasta.html">Pasta</a></li>
-    <li><a href="/odin-recipes/recipes/pizza.html">Pizza</a></li>
+    <li><a href="./recipes/bread.html">Bread</a></li>
+    <li><a href="./recipes/pasta.html">Pasta</a></li>
+    <li><a href="./recipes/pizza.html">Pizza</a></li>
     </ul>
 </body>
 </html>
